# openapi-rest-proxy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: integration_test.yml  lint.yml  promote-charm.yml  publish.yml  publish_image.yml  unit_test.yml
charm/: .gitignore  LICENSE  README.md  auth  charmcraft.auth  charmcraft.yaml  spread.yaml  tox.ini
charm/lib/charms/nginx_ingress_integrator/v0/: nginx_route.py
charm/src/: charm.py
charm/tests/integration/: test_charm.py
charm/tests/spread/integration/: task.yaml
charm/tests/unit/: test_charm.py
proxy/: app.py  proxy.py  service.py
tests/: test_service.py
tests/fixtures/: example-openapi.yml  pets
tests/integration/: test_integration.py
tests/unit/: test_logic.py
